// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializer common errors ApplicationError 1`] = `
Object {
  "@type": "Error/RemoteServer",
  "value": Object {
    "message": "message",
    "name": "RemoteServerError",
  },
}
`;

exports[`serializer common errors ApplicationError standard 1`] = `
Object {
  "@type": "Error/Application",
  "value": Object {
    "message": "message",
    "name": "ApplicationError",
  },
}
`;

exports[`serializer common errors ApplicationError with code 1`] = `
Object {
  "@type": "Error/Application",
  "value": Object {
    "code": "code",
    "message": "message",
    "name": "ApplicationError",
  },
}
`;

exports[`serializer common errors InternalError 1`] = `
Object {
  "@type": "Error/Internal",
  "value": Object {
    "message": "Some internal error",
    "name": "InternalError",
  },
}
`;

exports[`serializer common errors NotFoundError 1`] = `
Object {
  "@type": "Error/NotFound",
  "value": Object {
    "message": "message",
    "name": "NotFoundError",
    "references": Object {
      "id": 10,
      "type": "test",
    },
  },
}
`;

exports[`serializer standard errors Error 1`] = `
Object {
  "@type": "Error",
  "value": Object {
    "message": "Hello",
    "name": "Error",
  },
}
`;

exports[`serializer standard errors ReferenceError 1`] = `
Object {
  "@type": "ReferenceError",
  "value": Object {
    "message": "Hello",
    "name": "ReferenceError",
  },
}
`;

exports[`serializer standard errors TypeError 1`] = `
Object {
  "@type": "TypeError",
  "value": Object {
    "message": "Hello",
    "name": "TypeError",
  },
}
`;
